ligolang/src/test/contracts/negative/funarg_tuple_wrong.religo
let a = ((b, c, d): (int, int)) => d
let a = (((b, c, d)): ((((int))), int)) => d